# coap-rs

./: .travis.yml  .vimspector.json  Cargo.toml  LICENSE  README.md  appveyor.yml  index.html  rustfmt.toml
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: coverage.yml
benches/: client.rs  server.rs
bincode/: DecodingResult.t.html  encoded_size.v.html  encoded_size_bounded.v.html  enum.SizeLimit.html  fn.decode.html  fn.encode_into.html  fn.encoded_size.html  sidebar-items.js  type.EncodingResult.html
bincode/reader/: enum.DecodingError.html
bincode/writer/: EncodingResult.t.html
byteorder/: enum.BigEndian.html  enum.LittleEndian.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html
bytes/: enum.BufError.html  struct.Bytes.html  struct.MutByteBuf.html  struct.ROByteBuf.html  struct.RingBuf.html  struct.SeqByteStr.html
bytes/alloc/: trait.Allocator.html
bytes/buf/: struct.MutSliceBuf.html  struct.Take.html  trait.Sink.html
bytes/str/: struct.Bytes.html  struct.Rope.html  struct.SmallByteStr.html  struct.SmallByteStrBuf.html
coap/: index.html  sidebar-items.js
coap/client/: CoAPClient.t.html  sidebar-items.js
coap/message/: sidebar-items.js
coap/server/: CoAPServer.t.html  TxQueue.t.html  sidebar-items.js
examples/: client.rs  client_and_server.rs  dtls.rs  echo.rs  echo_with_dtls.rs  router_client.rs  router_server.rs  server.rs
master/: aliases.js  dark.css  light.css  rustdoc.css  search-index.js  settings.html  source-files.js
master/aho_corasick/: all.html  enum.ErrorKind.html  enum.MatchKind.html  index.html  struct.AcAutomaton.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Dense.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamFindIter.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.StateID.html  trait.Transitions.html  type.StateIdx.html
master/bincode/: SizeLimit.t.html  all.html  decode_from.v.html  encode_into.v.html  enum.DecodingError.html  enum.EncodingError.html  enum.ErrorKind.html  enum.SizeLimit.html  fn.config.html  fn.decode.html  fn.decode_from.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.encode.html  fn.encode_into.html  fn.encoded_size.html  fn.encoded_size_bounded.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  struct.Config.html  struct.DecoderReader.html  struct.EncoderWriter.html  struct.RefBox.html  struct.SliceBox.html  struct.StrBox.html  trait.BincodeRead.html  type.DecodingResult.html  type.EncodingResult.html  type.Error.html  type.Result.html
master/bitflags/: all.html  index.html  macro.bitflags.html
master/byteorder/: all.html  enum.BigEndian.html  enum.Error.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html  type.Result.html
master/bytes/: all.html  (+15 more)
mio/: struct.EventLoop.html  struct.Ipv4Addr.html  struct.Poll.html  struct.Selector.html  struct.Sender.html  trait.TryAccept.html  trait.TryRead.html
net2/: index.html  trait.TcpListenerExt.html  trait.TcpStreamExt.html
nix/: macro.io.html  type.c_int.html
num/: trait.CheckedSub.html  trait.FromPrimitive.html  trait.Saturating.html  trait.ToPrimitive.html
num_traits/: trait.CheckedAdd.html  trait.WrappingAdd.html
slab/: struct.SlabMutIter.html
src/: block.rs  block_transfer.rs  client.rs  client_builder.rs  dtls.rs  lib.rs  observer.rs  packet.rs  request.rs  server.rs  tcp.rs  transport.rs
url/: enum.Origin.html  enum.ParseError.html  enum.SchemeType.html  sidebar-items.js  struct.OpaqueOrigin.html  struct.UrlParser.html
uuid/: enum.ParseError.html  index.html
ws2_32/: index.html
(+6873 files in other folders)
