[package]
name = "coap"
version = "0.12.0"
description = "A CoAP library"
readme = "README.md"
documentation = "http://covertness.github.io/coap-rs/master/coap/index.html"
repository = "https://github.com/covertness/coap-rs"
license = "MIT"
authors = ["Yang Zhang <wuyingfengsui@gmail.com>"]
keywords = ["CoAP"]
edition = "2021"

[dependencies]
serde = { version= "^1.0", features= [ "derive" ], default-features = false }
url = "^2.2"
num-derive = "^0.3"
num-traits = "^0.2"
log = "^0.4"
regex = "^1.5"
tokio =  {version = "^1.11", features = ["full"]}
tokio-util = {version = "^0.6", features = ["codec","net"]}
tokio-stream = {version = "^0.1", features = ["time"]}
futures = "^0.3"
bytes = "^1.1"
coap-lite = "0.9.1"
lru_time_cache = "0.11.11"
mio = "=0.8.2"

[dev-dependencies]
quickcheck = "0.8.2"
