[package]
name = "coap"
version = "0.18.0"
description = "A CoAP library"
readme = "README.md"
documentation = "https://docs.rs/coap/"
repository = "https://github.com/covertness/coap-rs"
license = "MIT"
authors = ["Yang Zhang <wuyingfengsui@gmail.com>"]
keywords = ["CoAP"]
edition = "2021"

[dependencies]
url = "^2.2"
log = "^0.4"
regex = "^1.5"
tokio =  {version = "^1.32", features = ["full"]}
tokio-util = {version = "^0.6", features = ["codec","net"]}
tokio-stream = {version = "^0.1", features = ["time"]}
futures = "^0.3"
coap-lite = "0.11.3"
async-trait = "0.1.74"

# dependencies for dtls
webrtc-dtls = {version = "0.8.0", optional = true}
webrtc-util = {version = "0.8.0", optional = true}
rustls  = {version = "^0.21.1", optional = true}
rustls-pemfile  = {version = "2.0.0", optional = true}
rcgen  = {version = "^0.11.0", optional = true}
pkcs8  = {version = "0.10.2", optional = true}
sec1 = { version = "0.7.3", features = ["pem", "pkcs8", "std"], optional = true}
rand = "0.8.5"

[features]
default = ["dtls"]
dtls = ["dep:webrtc-dtls", "dep:webrtc-util", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:pkcs8", "dep:sec1"]


[dev-dependencies]
quickcheck = "0.8.2"
socket2 = "0.5"
tokio-test = "0.4.4"

